fix(module:code-editor): remove overflow styles (#4016)
* fix(module:code-editor): remove overflow styles

* docs: add tooltip to the complex demo

* refactor: use types imported from monaco editor for better intellisense

--- a/components/code-editor/style/index.less
+++ b/components/code-editor/style/index.less
@@ -6,7 +6,6 @@
 .@{code-editor-prefix-cls} {
   display: block;
   position: relative;
-  overflow: hidden;
   height: 100%;
   width: 100%;
   background-color: @component-background;
